--- a/index.html
+++ b/index.html
@@ -29,33 +29,33 @@
     <source src="520.mp3" type="audio/mp3" />
   </audio>
   <div id="main">
-    <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(Chrome)或者火狐(Firefox)浏览器，或者其他游览器的最新版本。</div>
+    <div id="error">Trang này được chỉnh sửa bằng HTML5. Trình duyệt của bạn hiện không thể hiển thị trang này. Vui lòng chuyển sang phiên bản mới nhất của Chrome hoặc Firefox hoặc các trình duyệt khác.。</div>
     <div id="wrap">
       <div id="text">
         <div id="code">
-          <font color="#FF0000"> <span class="say">渡的过山河星辰，淌不过你的一笑一颦</span><br>
+          <font color="#FF0000"> <span class="say">Tôi có thể vượt qua núi, sông và các vì sao, nhưng tôi không thể vượt qua nụ cười hay cái nhíu mày của bạn</span><br>
             <span class="say"> </span><br>
-            <span class="say"> 经丘寻壑不及你，尾生抱柱也无悔意</span><br>
+            <span class="say"> Tôi không thể so sánh với bạn trong việc tìm kiếm núi và thung lũng, và tôi không hối tiếc ngay cả khi tôi ôm trụ cột</span><br>
             <span class="say"></span><br>
             <span class="say">傻猪猪，我爱你，虽然你说我没有给你一个仪式感的告白</span><br>
             <span class="say"></span><br>
-            <span class="say">我知道我现在还没有多大的能力可以给你带来什么</span><br>
+            <span class="say">Tôi biết tôi không có nhiều khả năng để mang lại cho bạn bất cứ điều gì bây giờ</span><br>
             <span class="say"></span><br>
-            <span class="say">但是我会用行动证明一切！</span><br>
+            <span class="say">Nhưng tôi sẽ chứng minh mọi thứ bằng hành động của mình！</span><br>
             <span class="say"></span><br>
-            <span class="say">我们会有更好的未来！</span><br>
+            <span class="say">Chúng ta sẽ có một tương lai tốt đẹp hơn！</span><br>
             <span class="say"></span><br>
-            <span class="say"> 不要忘记了，我可是下了订单，说好了要养你一辈子的呀</span><br>
+            <span class="say"> Đừng quên, tôi đã đặt hàng và hứa sẽ hỗ trợ bạn trọn đời.</span><br>
             <span class="say"></span><br>
-            <span class="say"> 我们的路还很长，一起努力走下去，为了我们更好的未来！</span><br>
+            <span class="say"> Chúng ta vẫn còn một chặng đường dài phía trước, hãy cùng nhau nỗ lực vì tương lai tốt đẹp hơn！</span><br>
             <span class="say"></span><br>
             <span class="say"></span><br>
-            <span class="say"><span class="space"></span> --- 爱你的猪猪 --- </span> </font>
+            <span class="say"><span class="space"></span> --- Yêu em heo con --- </span> </font>
           </p>
         </div>
       </div>
       <div id="clock-box"> <span class="STYLE1"></span>
-        <font color="#ff5e04">可爱的小猪猪，我喜欢你</font> <span class="STYLE1">已经是……</span>
+        <font color="#ff5e04">Chú heo con dễ thương, tôi yêu bạn</font> <span class="STYLE1">Đã……</span>
         <div id="clock"></div>
       </div>
       <canvas id="canvas" width="1100" height="680"></canvas>
