--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 
 <body>
-  <audio autoplay="autopaly">
-    <source src="520.mp3" type="audio/mp3" />
+  <audio controls autoplay>
+    <source src="520.mp3" type="audio/mpeg">
   </audio>
   <div id="main">
     <div id="error">Trang này được chỉnh sửa bằng HTML5. Trình duyệt của bạn hiện không thể hiển thị trang này. Vui lòng chuyển sang phiên bản mới nhất của Chrome hoặc Firefox hoặc các trình duyệt khác.。</div>
