--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
       <div id="clock-box"> <span class="STYLE1"></span>
-        <font color="#ff5e04">Chú heo con dễ thương, tôi yêu bạn</font> <span class="STYLE1">Đã……</span>
+        <font color="#ff5e04">miu xinh, ah yêu bé </font> <span class="STYLE1">Đã……</span>
         <div id="clock"></div>
       </div>
       <canvas id="canvas" width="1100" height="680"></canvas>
@@ -192,7 +192,7 @@
 
       var textAnimate = eval(Jscex.compile("async", function () {
         var together = new Date();
-        together.setFullYear(2020, 2, 27); 			//Thời gian Năm Tháng Ngày
+        together.setFullYear(2024, 12, 12); 			//Thời gian Năm Tháng Ngày
         together.setHours(16);						//Giờ
         together.setMinutes(53);					//phút
         together.setSeconds(0);					//Vài giây trước
